; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_sha1_lookup.c_sha1_position.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_sha1_lookup.c_sha1_position.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sha1_position(i8* %0, i64 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %15 = load i8*, i8** %7, align 8
  store i8* %15, i8** %12, align 8
  br label %16

16:                                               ; preds = %45, %5
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp ult i32 %17, %18
  br i1 %19, label %20, label %46

20:                                               ; preds = %16
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %10, align 4
  %23 = add i32 %21, %22
  %24 = udiv i32 %23, 2
  store i32 %24, i32* %13, align 4
  %25 = load i8*, i8** %12, align 8
  %26 = load i32, i32* %13, align 4
  %27 = zext i32 %26 to i64
  %28 = load i64, i64* %8, align 8
  %29 = mul i64 %27, %28
  %30 = getelementptr inbounds i8, i8* %25, i64 %29
  %31 = load i8*, i8** %11, align 8
  %32 = call i32 @git_oid__hashcmp(i8* %30, i8* %31)
  store i32 %32, i32* %14, align 4
  %33 = load i32, i32* %14, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %20
  %36 = load i32, i32* %13, align 4
  store i32 %36, i32* %6, align 4
  br label %50

37:                                               ; preds = %20
  %38 = load i32, i32* %14, align 4
  %39 = icmp sgt i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %37
  %41 = load i32, i32* %13, align 4
  store i32 %41, i32* %10, align 4
  br label %45

42:                                               ; preds = %37
  %43 = load i32, i32* %13, align 4
  %44 = add i32 %43, 1
  store i32 %44, i32* %9, align 4
  br label %45

45:                                               ; preds = %42, %40
  br label %16

46:                                               ; preds = %16
  %47 = load i32, i32* %9, align 4
  %48 = sub nsw i32 0, %47
  %49 = sub nsw i32 %48, 1
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %46, %35
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i32 @git_oid__hashcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
